versions/GNDS-v2.0/GNDS/c/src/v2.0/general/FormFactor.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// FormFactor is the basic handle type in this file. Example:
//    // Create a default FormFactor object:
//    FormFactor handle = FormFactorDefault();
// Functions involving FormFactor are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_GNDS_V2_0_GENERAL_FORMFACTOR
#define C_INTERFACE_GNDS_V2_0_GENERAL_FORMFACTOR

#include "GNDStk.h"
#include "v2.0/general/XYs1d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct FormFactorClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ FormFactor
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct FormFactorClass *FormFactor;

// --- Const-aware handles.
typedef const struct FormFactorClass *const ConstHandle2ConstFormFactor;
typedef       struct FormFactorClass *const ConstHandle2FormFactor;
typedef const struct FormFactorClass *      Handle2ConstFormFactor;
typedef       struct FormFactorClass *      Handle2FormFactor;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstFormFactor
FormFactorDefaultConst();

// +++ Create, default
extern_c Handle2FormFactor
FormFactorDefault();

// --- Create, general, const
extern_c Handle2ConstFormFactor
FormFactorCreateConst(
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Create, general
extern_c Handle2FormFactor
FormFactorCreate(
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
FormFactorAssign(ConstHandle2FormFactor self, ConstHandle2ConstFormFactor from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
FormFactorDelete(ConstHandle2ConstFormFactor self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
FormFactorRead(ConstHandle2FormFactor self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
FormFactorWrite(ConstHandle2ConstFormFactor self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
FormFactorPrint(ConstHandle2ConstFormFactor self);

// +++ Print to standard output, as XML
extern_c int
FormFactorPrintXML(ConstHandle2ConstFormFactor self);

// +++ Print to standard output, as JSON
extern_c int
FormFactorPrintJSON(ConstHandle2ConstFormFactor self);


// -----------------------------------------------------------------------------
// Child: XYs1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FormFactorXYs1dHas(ConstHandle2ConstFormFactor self);

// --- Get, const
extern_c Handle2ConstXYs1d
FormFactorXYs1dGetConst(ConstHandle2ConstFormFactor self);

// +++ Get
extern_c Handle2XYs1d
FormFactorXYs1dGet(ConstHandle2FormFactor self);

// +++ Set
extern_c void
FormFactorXYs1dSet(ConstHandle2FormFactor self, ConstHandle2ConstXYs1d XYs1d);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/general/FormFactor/src/custom.h"

#undef extern_c
#endif